trunk/Archive2/df/30788012aba033/output
main.cpp: In function 'int main()':
main.cpp:10:44: error: no matching function for call to 'std::hash<std::basic_string<char> >::hash(std::string&)'
     std::cout << std::hash<std::string>(str) << '\n';
                                            ^
main.cpp:10:44: note: candidates are:
In file included from /usr/include/c++/4.8/string:52:0,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/basic_string.h:3044:12: note: constexpr std::hash<std::basic_string<char> >::hash()
     struct hash<string>
            ^
/usr/include/c++/4.8/bits/basic_string.h:3044:12: note:   candidate expects 0 arguments, 1 provided
/usr/include/c++/4.8/bits/basic_string.h:3044:12: note: constexpr std::hash<std::basic_string<char> >::hash(const std::hash<std::basic_string<char> >&)
/usr/include/c++/4.8/bits/basic_string.h:3044:12: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'const std::hash<std::basic_string<char> >&'
/usr/include/c++/4.8/bits/basic_string.h:3044:12: note: constexpr std::hash<std::basic_string<char> >::hash(std::hash<std::basic_string<char> >&&)
/usr/include/c++/4.8/bits/basic_string.h:3044:12: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'std::hash<std::basic_string<char> >&&'
